   * Implemented a function which gives the game's gold parameters.
   * Extended safe.py environment to expand AI's language capabilities; including:
	collections, hotshot, psyco, Queue, sets, time, and the upcoming wail module
	Use of chr, hash, lambda, ord, and super (new style classes) are now allowed
	Control of safe_exec can now be toggled from the wesnoth binary (not implemented)
 * terrains:
   * Fixed city village not being alias of the village terrain type; this was
     causing a duplicate "Village" terrain being displayed in the defense ratios
     section of unit descriptions in game help
   * Reorganisation of the terrain macros including more consistent image
     naming. The old macros are kept for now for compatibility.
   * New terrain: cave path
   * Fixed a ToD coloring bug preventing to use red channel below 8 (on 255)
   * Fixed some bugs with location-specific terrain-graphic rules
 * units:
   * balancing changes:
     * changed the healthy trait to give 1HP and 1HP per level instead of 2HP
     * decreased the ranged attack of the Mage of Light from 15-3 to 12-3
     * decreased the melee attack of the Merman Warrior from 8-4 to 10-3
 * user interface:
   * Add a hotkey "Custom Command" and a command "custom <command>" to assign
     a command to this hotkey. Also accept sequence of commands ("this; that").
   * Add a command "alias <name>[=<command>]". To set or show shorter alias to
     a command. Also accept incomplete command and pass parameters (ex: "alias
     hp=unit hitpoints", then use "hp 100"). Saved between sessions.
   * Add a filter text box for the "Create Unit" dialog
   * Various improvements of filter text box, now words separated by space give
     a filter doing an "and" combination of them.
   * Added "Host Network Game" option back to multiplayer menu
   * Fixed chatlog not to so lobby joins if set in preferences
   * Also highlight the fog under the mouse (not just the terrain)