@@ -101,6 +101,13 @@
 #    default=60
 #[/advanced_preference]
 
+[advanced_preference]
+    field=only_run_safe_python_ais
+    name=_"Only Run Safe Python AIs"
+    type=boolean
+    default=yes
+[/advanced_preference]
+
 [game_config]
     [server]
         name=_"Official Wesnoth Server"
